using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace StateManagement_ver3{
    public enum E_MoveState {
        LAND,
        JUMP,
        FALL,
        DUSH
    }
}
